# aoc

./: .gitignore  README.md  pyproject.toml  utils.py
2021/: 1.ipynb  10.ipynb  2.ipynb  3.ipynb  4.ipynb  5.ipynb  6.ipynb  7.ipynb  8.ipynb  9.ipynb
