[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aoc"           # <--- package name (must match folder)
version = "0.1.02"
description = "Advent Of Code solutions"
authors = [
  { name = "zz", email = "you@example.com" }
]
dependencies = []        # e.g. ["requests"]

[tool.setuptools]
py-modules = ["utils"]
